layout navbar successfuly

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
+ 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,11 @@
 
 <body>
   <div class="grid-container">
+    <!------------NAVBA---------->
     <div class="navbar">
 
       <div class="user__profile">
+
         <div class="img_profile">
           <img src="img/img1.jpg" alt="" class="profile">
         </div>
@@ -29,9 +31,55 @@
 
       </div>
 
-      <div class="card"></div>
-    </div>
-    <div class="header p-layout">
+      <div class="card">
+
+        <div class="card-content">
+
+          <div class="box-icon bg-card-three">
+            <i class="fas fa-chart-line"></i>
+          </div>
+
+          <div class="text__card">
+            <p>View Analitycs</p>
+            <p>1</p>
+          </div>
+
+          <i id="less" class="fas fa-angle-left"></i>
+
+        </div>
+      </div>
+
+      <div class="card">
+          <div class="card-content">
+            <div class="box-icon bg-card-one">
+              <i class="fas fa-shopping-bag"></i>
+            </div>
+            <div class="text__card">
+              <p>Succesifuly Send</p>
+              <p>120</p>
+            </div>
+            <i id="less" class="fas fa-angle-left"></i>
+          </div>
+      </div>
+
+      <div class="card">
+          <div class="card-content">
+            <div class="box-icon bg-card-two">
+              <i class="fas fa-dollar-sign"></i>
+          </div>   
+          <div class="text__card">
+            <p>Earn month</p>
+            <p>$30000</p>
+            </div>
+            <i id="less" class="fas fa-angle-left"></i>
+          </div>
+      </div>
+      
+      
+      </div>
+    <!-------------END NAVBAR----------->
+    <!--------------HEADER---------->
+    <div class="header">
       <ul class="header__menu">
         <li class="items"><a class="item active"href="#home">Home</a></li>
         <li class="items"><a class="item" href="#setting">Setting</a></li>
@@ -41,16 +89,20 @@
         <i class="fas fa-search"></i>
       </div>
     </div>
+    <!---------------END HEADER---------------->
+
+    <!--------------------MAIN--------------->
     <div class="main p-layout">
-      <nav class="main__navigation">
+      <!-- <nav class="main__navigation">
         <a class ="nav__link active" href="#overview">Overview</a>
         <a class ="nav__link" href="#products">Products</a>
         <a class ="nav__link" href="#shipping">Shipping</a>
         <a class ="nav__link" href="#payment">Payment</a>
-      </nav>
+      </nav> -->
       CONTENT
     </div>
   </div>
+  <!----------END MAIN--------------->
 
 </body>
 
